# code-agent-sdk

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  _typos.toml  deny.toml
.github/workflows/: build.yml
docs/: 001-arch-python.md  002-arch-rust.md  003-multi-backend-design.md  004-architecture.md  arch-python.md  arch-rust.md
e2e-tests/: README.md
examples/: hooks.rs  mcp_calculator.rs  quick_start.rs  streaming_mode.rs  system_prompt.rs  tool_permission_callback.rs  tools_option.rs
fixtures/code-agent-sdk/: Cargo.toml  README.md
fixtures/code-agent-sdk/src/: main.rs
fixtures/code-agent-sdk/src/fixtures/: helpers.rs  mod.rs  test_01_basic_query.rs  test_02_query_with_options.rs  test_03_multi_turn_session.rs  test_04_codex_options.rs  test_05_cursor_options.rs  test_06_backend_validation.rs  test_07_error_handling.rs  test_08_message_types.rs
src/: client.rs  error.rs  lib.rs  options.rs  types.rs
src/backend/: mod.rs
src/backend/claude/: cli_finder.rs  command_builder.rs  message_parser.rs  mod.rs  transport.rs
src/backend/codex/: app_server.rs  exec_transport.rs  jsonrpc.rs  message_parser.rs  mod.rs
src/backend/cursor/: message_parser.rs  mod.rs  session.rs  transport.rs
src/internal/: client.rs  message_parser.rs  mod.rs  query.rs
src/transport/: mod.rs  subprocess_cli.rs
tests/: test_e2e.rs  test_errors.rs  test_integration.rs  test_message_parser.rs  test_session_semantics.rs  test_transport.rs  test_types.rs
